programa1:adicionando autores

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-= Title: Titulo do Trabalho (Num Grupo) =  
+= Title: Titulo do Trabalho (Num Grupo) =
 
 = Authors =
 
@@ -6,10 +6,10 @@
 
 * Prof. Dr. Ruben Carlo Benante <rcb@poli.br> @drbeco
 
-=== Students - Group NN - Disciplina: Nome do Grupo ===
+=== Students - Group NN - Programacao 1: sanji ===
 
-* Nome Aluno1 Completo <email@poli.br> @usergithub
-* Nome Aluno2 Completo <email@poli.br> @usergithub
-
+* Lucas Pereira Silveira De Azevedo <lpsa@poli.br> @LucasPSA3322
+* Dante De Sa Leitao Melo De Oliveira <dslmo@poli.br> @itsdanteoliveira
+* Arthur Rodrigues Rocha Lopes <arrl@poli.br> @arte011
 
 
